--- a/面试问题笔记.md
+++ b/面试问题笔记.md
@@ -78,6 +78,89 @@
 2. 回归插补
 3. 抽样填补等
 
+## xgboost和lr，对比其他分类算法的场景优势。
+
+因为项目要需要更高的效率，所以要用xgboost和lr。
+
+### Xgboost
+
+优缺点：1）在寻找最佳分割点时，考虑传统的枚举每个特征的所有可能分割点的贪心法效率太低，xgboost实现了一种近似的算法。大致的思想是根据百分位法列举几个可能成为分割点的候选者，然后从候选者中根据上面求分割点的公式计算找出最佳的分割点。2）xgboost考虑了训练数据为稀疏值的情况，可以为缺失值或者指定的值指定分支的默认方向，这能大大提升算法的效率，paper提到50倍。3）特征列排序后以块的形式存储在内存中，在迭代中可以重复使用；虽然boosting算法迭代必须串行，但是在处理每个特征列时可以做到并行。4）按照特征列方式存储能优化寻找最佳的分割点，但是当以行计算梯度数据时会导致内存的不连续访问，严重时会导致cache miss，降低算法效率。paper中提到，可先将数据收集到线程内部的buffer，然后再计算，提高算法的效率。5）xgboost 还考虑了当数据量比较大，内存不够时怎么有效的使用磁盘，主要是结合多线程、数据压缩、分片的方法，尽可能的提高算法的效率。
+
+适用场景：分类回归问题都可以。
+
+### Lr
+
+优点：实现简单，广泛的应用于工业问题上；分类时计算量非常小，速度很快，存储资源低；便利的观测样本概率分数；对逻辑回归而言，多重共线性并不是问题，它可以结合L2正则化来解决该问题。
+
+缺点：当特征空间很大时，逻辑回归的性能不是很好；容易欠拟合，一般准确度不太高
+
+不能很好地处理大量多类特征或变量；只能处理两分类问题（在此基础上衍生出来的softmax可以用于多分类），且必须线性可分；对于非线性特征，需要进行转换。
+
+适用场景：LR同样是很多分类算法的基础组件，它的好处是输出值自然地落在0到1之间，并且有概率意义。因为它本质上是一个线性的分类器，所以处理不好特征之间相关的情况。虽然效果一般，却胜在模型清晰，背后的概率学经得住推敲。它拟合出来的参数就代表了每一个特征(feature)对结果的影响。也是一个理解数据的好工具。
+
+
+
+## ISODATA算法比kmeans有哪些改进
+
+K-means算法通常适合于分类数目已知的聚类，而ISODATA算法则更加灵活；2）从算法角度看，ISODATA算法与K-means算法相似，聚类中心都是通过样本均值的迭代运算来决定的；3）ISODATA算法加入了一些试探步骤，并且可以结合成人机交互的结构，使其能利用中间结果所取得的经验更好地进行分类。
+
+
+
+## 描述一个算法项目从Kickoff到落地的全过程
+
+撰写项目指南，分析项目需求，制定项目方案，确定技术路线，开始实施，测试，反馈，改进，上线运行。
+
+## 如何处理数据中经常存在的数据不平衡的问题。
+
+针对不平衡数据集的问题，可以采用以下几种方法：
+从数据的角度：
+重采样，　又分为欠采样和过采样
+K-fold交叉验证
+对于正负样本极不均匀的问题，采用异常检测或者一分类问题
+组合不同的重采样数据集。建立n个模型，每个模型使用稀有类别的所有样本和丰富类别的n个不同样本（比例为１：１）
+用不同的比例重新采样
+对丰富类别进行聚类处理，并使用类中心作为样本与稀有类样本组合成数据集训练
+从模型的角度：
+１．　设计针对不平衡数据集的模型，如果设计的模型本身就适用于不平衡数据，则不需要重新采样数据，XGBoost，就是其中的典型代表。
+２．　通过设计一个代价函数来惩罚稀有类别的错误分类而不是分类丰富类别，可以设计出许多自然汉化为稀有类别的模型。例如：调整SVM以惩罚稀有类别的错误分类。    
+
+## IP报文经过一个路由器改变哪些字段
+
+源和目的地的IP地址，源和目的地的MAC地址以及TTL值
+
+　
+
+## FastText 和Glovec原理
+
+FastText是将句子中的每个词通过一个lookup层映射成词向量,对词向量叠加取平均作为句子的向量,然后直接用线性分类器进行分类,FastText中没有非线性的隐藏层,结构相对简单而且模型训练的更快。
+Glovec融合了矩阵分解和全局统计信息的优势,统计语料库的词-词之间的共现矩阵,加快模型的训练速度而且又可以控制词的相对权重。
+
+
+
+## Word2Vec中skip-gram是什么,Negative Sampling怎么做
+
+Word2Vec通过学习文本然后用词向量的方式表征词的语义信息,然后使得语义相似的单词在嵌入式空间中的距离很近。而在Word2Vec模型中有Skip-Gram和CBOW两种模式,Skip-Gram是给定输入单词来预测上下文,而CBOW与之相反,是给定上下文来预测输入单词。Negative Sampling是对于给定的词,并生成其负采样词集合的一种策略,已知有一个词,这个词可以看做一个正例,而它的上下文词集可以看做是负例,但是负例的样本太多,而在语料库中,各个词出现的频率是不一样的,所以在采样时可以要求高频词选中的概率较大,低频词选中的概率较小,这样就转化为一个带权采样问题,大幅度提高了模型的性能。
+
+
+
+## 模拟退火和蚁群对比
+
+模拟退火算法:退火是一个物理过程，粒子可以从高能状态转换为低能状态，而从低能转换为高能则有一定的随机性，且温度越低越难从低能转换为高能。就是在物体冷却的过程中，物体内部的粒子并不是同时冷却下来的。因为在外围粒子降温的时候，里边的粒子还会将热量传给外围粒子，就可能导致局部粒子温度上升，当然，最终物体的温度还是会下降到环境温度的。
+先给出一种求最优解的方法，在寻找一个最优解的过程中采取分段检索的方式，在可行解中随机找出来一个，然后在这个解附近进行检索，找到更加优化的解，放弃原来的，在新得到的解附近继续检索，当无法继续找到一个更优解的时候就认为算法收敛，最终得到的是一个局部最优解。
+
+蚁群算法:很显然，就是模仿蚂蚁寻找食物而发明的算法，主要用途就是寻找最佳路径。先讲一下蚂蚁是怎么寻找食物，并且在寻找到了食物后怎么逐渐确定最佳路径的。
+
+事实上，蚂蚁的目光很短，它只会检索它附近的很小一部分空间，但是它在寻路过程中不会去重复它留下信息素的空间，也就是它不会往回走。当一群蚂蚁遇到障碍物了之后，它们会随机分为两拨，一波往左一波往右，但是因为环境会挥发掉它们的信息素，于是，较短的路留下的信息素多，而较长的路因为挥发较多，也就留下得少了。接下来，蚁群就会趋向于行走信息素较多的路径，于是大部分蚂蚁就走了较短的路了。但是蚁群中又有一些特别的蚂蚁，它们并不会走大家走的路，而是以一定概率寻找新路，如果新路更短，信息素挥发更少，渐渐得蚁群就会走向更短的路径。
+
+以上就是蚂蚁寻路的具体过程。把这个过程映射到计算机算法上，计算机在单次迭代过程中，会在路径的节点上留下信息素（可以使用数据变量来表示）。每次迭代都做信息素蒸发处理，多次迭代后聚集信息素较多的路径即可认为是较优路径。
+
+## 贪婪算法
+
+贪婪算法(贪心算法)是指在对问题进行求解时，在每一步选择中都采取最好或者最优(即最有利)的选择，从而希望能够导致结果是最好或者最优的算法。贪婪算法所得到的结果往往不是最优的结果(有时候会是最优解)，但是都是相对近似(接近)最优解的结果。贪婪算法并没有固定的算法解决框架，算法的关键是贪婪策略的选择，根据不同的问题选择不同的策略。
+必须注意的是策略的选择必须具备无后效性，即某个状态的选择不会影响到之前的状态，只与当前状态有关，所以对采用的贪婪的策略一定要仔细分析其是否满足无后效性。
+
+其基本的解题思路为：1)建立数学模型来描述问题;2)把求解的问题分成若干个子问题;3)对每一子问题求解，得到子问题的局部最优解;4)把子问题对应的局部最优解合成原来整个问题的一个近似最优解。
+
 ### Note
 
 1. 朴素贝叶斯的条件就是每隔变量相互独立
